(MIN 10) Minor Fix: Image is no longer stretched.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -28,6 +28,7 @@ border-radius: 10 rem;
   position: relative;
   height:40vh; 
   width: 90%;
+  object-fit: contain;
   margin: 0 auto;
   border-radius: 20px;
   padding-left: 0px;
